add guide images

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="navbar bg-white relative">
     <div class="md:container">
-        <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 xl:p-0 lg:px-8 xl:max-w-screen-xl relative" aria-label="Global">
-            <div class="flex lg:flex-1">
+        <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:p-0 xl:px-8 xl:max-w-screen-xl relative" aria-label="Global">
+            <div class="flex">
                 <a routerLink="/" class="header-image m-1.5 p-1 flex flex-col lg:p-2 lg:flex-row items-center">
                     <img class="h-8 w-auto md:h-14 xl:h-10" src="../../../assets/images/logo.png" alt="logo">
-                    <div class="text-slate-950 font-montserrat_alternates font-bold text-xs lg:text-sm lg:ml-2">Green PCR Lab</div>
+                    <div class="text-slate-950 font-montserrat_alternates font-bold text-xs xl:text-sm lg:ml-2">Green PCR Lab</div>
                 </a>
             </div>
             <app-burger-menu></app-burger-menu>
