--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -16,43 +16,70 @@
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
             <p class="my-6">Будьте обережні при виборі витратних матеріалів, так як неправильно відібрані і збережені зразки не приймаються до досліджень.</p>
 
-            <table>
+            <table class="w-full border-collapse border border-gray-300">
                 <tbody>
                     <tr>
-                        <th>Матеріал для дослідження</th>
-                        <th>Фото витратних матеріалів</th>
+                        <th class="text-left px-4 py-2 border border-gray-300">Матеріал для дослідження</th>
+                        <th class="text-left px-4 py-2 border border-gray-300">Фото витратних матеріалів</th>
                     </tr>
                     <tr>
-                        <td>&bull; Кров з ЕДТА</td>
-                        <td><img src="../../../../../assets/images/containers/edta.png" class="w-60 mx-auto bg-" alt="edta"><p>Пробирка с антикоагулянтом</p></td>
-                    </tr>
-                    <tr>
-                        <td>&bull; Змиви з кон'юнктиви та носа</td>
-                        <td><img src="../../../../../assets/images/containers/eppendorf.png" class="w-60 mx-auto" alt="eppendorf"><p>Еппендорф</p></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>&bull; змив </p>
-                            <p>&bull; зішкріб </p>
-                            <p>&bull; рановий матеріал </p>
-                            <p>&bull; ексудат </p>
+                        <td class="border border-gray-300">
+                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">• Кров з ЕДТА</div>
                         </td>
-                        <td><img src="../../../../../assets/images/containers/aplicator.png" class="w-60 mx-auto" alt="aplicator"><p>Аплікатор з транспортної пробіркою</p></td>
+                        <td class="px-4 py-2 border border-gray-300">
+                            <img src="../../../../../assets/images/containers/edta.png" class="w-60 mx-auto lg:w-1/2" alt="edta">
+                            <p class="text-center">Пробирка с антикоагулянтом</p>
+                        </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p>&bull; cеча</p>
-                            <p>&bull; секрет сперми</p>
-                            <p>&bull; жовч</p>
+                        <td class="border border-gray-300">
+                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">• Змиви з кон'юнктиви та носа</div>
                         </td>
-                        <td><img src="../../../../../assets/images/containers/jar.png" class="w-60 mx-auto" alt="jar"><p>Баночка для з кришкою</p></td> 
+                        <td class="px-4 py-2 border border-gray-300">
+                            <img src="../../../../../assets/images/containers/eppendorf.png" class="w-60 mx-auto lg:w-1/2" alt="eppendorf">
+                            <p class="text-center">Еппендорф</p>
+                        </td>
                     </tr>
                     <tr>
-                        <td>
-                            <p class="block w-64 mx-auto">Зонд урогенітальний застосовується для забору матеріалу (виділення, поверхневий зішкріб)
-                                 з уретри, піхви, шийки матки для подальшого дослідження</p>
+                        <td class="border border-gray-300">
+                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">
+                                <p>• змив</p>
+                                <p>• зішкріб</p>
+                                <p>• рановий матеріал</p>
+                                <p>• ексудат</p>
+                            </div>
                         </td>
-                        <td><img src="../../../../../assets/images/containers/zond.png" class="w-60 mx-auto" alt="zond"><p>Зонд урогенітальний</p></td> 
+                        <td class="px-4 py-2 border border-gray-300"> 
+                            <img src="../../../../../assets/images/containers/aplicator.png" class="w-60 mx-auto lg:w-1/2" alt="aplicator">
+                            <p class="text-center">Аплікатор з транспортної пробіркою</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="border border-gray-300">
+                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">
+                                <p>• сеча</p>
+                                <p>• секрет сперми</p>
+                                <p>• жовч</p>
+                            </div>
+                        </td>
+                        <td class="px-4 py-2 border border-gray-300">
+                            <img src="../../../../../assets/images/containers/jar.png" class="w-60 mx-auto lg:w-1/2" alt="jar">
+                            <p class="text-center">Баночка з кришкою</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="border border-gray-300">
+                            <div class="mx-auto sm:w-1/2 py-2 text-left">
+                                <p>
+                                    Зонд урогенітальний застосовується для забору матеріалу
+                                    (виділення, поверхневий зішкріб) з уретри, піхви, шийки матки для подальшого дослідження
+                                </p>
+                            </div>
+                        </td>
+                        <td class="px-4 py-2 border border-gray-300">
+                            <img src="../../../../../assets/images/containers/zond.png" class="w-60 mx-auto lg:w-1/2" alt="zond">
+                            <p class="text-center">Зонд урогенітальний</p>
+                        </td>
                     </tr>
                 </tbody>
             </table>
