--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -21,6 +21,13 @@
             <p>&ndash; Підготуйте витратні матеріали для відбору, зберігання та транспортування (див. 
                 <a routerLink="/materials" class="text-blue">Витратний матеріал</a>)
             </p>
+            <div class="flex flex-wrap">
+                <img src="../../../../assets/images/containers/edta.png" class="w-40" alt="edta">
+                <img src="../../../../assets/images/containers/eppendorf.png" class="w-40" alt="eppendorf">
+                <img src="../../../../assets/images/containers/aplicator.png" class="w-40" alt="aplicator">
+                <img src="../../../../assets/images/containers/jar.png" class="w-40" alt="jar">
+                <img src="../../../../assets/images/containers/zond.png" class="w-40" alt="zond">
+            </div>
             <p class="mt-3"><b>2. Вибірка для дослідження:</b></p>
             <p>&ndash; дотримуватися правил відбору матеріалів для лабораторних досліджень (див. 
                 <a routerLink="/rules" class="text-blue">Правила збіру проб</a>)
@@ -39,7 +46,7 @@
             <p>&ndash; після того, як матеріал буде готовий до відправки в лабораторію, звяжіться з нами для доставки у
                 лабораторію за телефоном (див. <a routerLink="/contact" class="text-blue">Контакти</a>). Зразки доставляються в
                 лабораторію в день відбіру або на наступний день <strong>"Новою поштою"</strong> за адресою: </p>
-            <p><i class="bg-light-green font-semibold">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
+            <p><i class="bg-light-green font-semibold px-2">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
             <p class="mt-3"><b>5. Оплата:</b></p>
             <p> Реквізити на оплату після отримання матеріалу.</p>
         </div>
