--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <p class="price-info font-jost my-5 md:text-xl lg:text-lg lg:my-2">Ціни вказані за станом на 20.03.2024</p>
-      <p class="price-info text-dark-red font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.10.24 очікується підвищення цін</p>
+      <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.10.24 очікується підвищення цін</p>
       <div class="block worktime text-center font-jost p-1 mx-6 md:text-2xl md:mt-36 md:leading-9 lg:text-xl lg:mx-32 lg:font-medium xl:mt-8 xl:mx-60">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
@@ -33,7 +33,7 @@
 
   <!-- About us -->
   <div class="container">
-    <div class="font-nunito text-base relative py-6 -mt-16 mb-5 bg-white rounded-3xl shadow-2xl drop-shadow-md sm:mx-12 xl:-mt-10 xl:mx-20 xl:px-10">
+    <div class="font-nunito text-base relative py-6 -mt-16 mb-5 bg-white rounded-3xl shadow-2xl drop-shadow-md sm:mx-12 xl:-mt-10 xl:mx-36 xl:px-10">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Про нас</h2>
       <h4 class="text-center font-bold pb-3 px-8">Універсальна ПЛР Лабораторія Green lab</h4>
       <p class="indent-6 px-6 xl:text-base">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
