--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -1,4 +1,4 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-40">
+<div class="container font-nunito text-lg sm:px-6 xl:px-80">
     <div class="flex flex-wrap justify-center xl:mb-10">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
             <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -15,6 +15,7 @@
             <p class="my-6">Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини. Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
             <p class="my-6">Будьте обережні при виборі витратних матеріалів, так як неправильно відібрані і збережені зразки не приймаються до досліджень.</p>
+            <p class="my-6">Будь-ласка, відправляйте аналізи лише витратними матеріалами які наведені нижче. Баночки та шприци не відправляйте.</p>
 
             <table class="w-full border-collapse border border-gray-300">
                 <tbody>
@@ -56,24 +57,9 @@
                     </tr>
                     <tr>
                         <td class="border border-gray-300">
-                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">
-                                <p>• сеча</p>
-                                <p>• секрет сперми</p>
-                                <p>• жовч</p>
-                            </div>
-                        </td>
-                        <td class="px-4 py-2 border border-gray-300">
-                            <img src="../../../../../assets/images/containers/jar.png" class="w-60 mx-auto lg:w-1/2" alt="jar">
-                            <p class="text-center">Баночка з кришкою</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="border border-gray-300">
                             <div class="mx-auto sm:w-1/2 py-2 text-left">
-                                <p>
-                                    Зонд урогенітальний застосовується для забору матеріалу
-                                    (виділення, поверхневий зішкріб) з уретри, піхви, шийки матки для подальшого дослідження
-                                </p>
+                                <p>• Змиви з кон'юнктиви та носа</p>
+                                <p>• зішкріб зі слизової урогенітального тракту / піхви / прямої кишки</p>
                             </div>
                         </td>
                         <td class="px-4 py-2 border border-gray-300">
