--- a/src/app/components/pages/services-pages-collection/diagnostics-pages-collection/diagnostics-plr-cats/diagnostics-plr-cats.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-pages-collection/diagnostics-plr-cats/diagnostics-plr-cats.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="flex flex-wrap justify-between w-full">
         <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
-            <p class="text-center">Термін виконання 2-3 дні</p>
+            <p class="text-center"><span no-link>Термін виконання 2&#8209;3 дні</span></p>
             <table>
                 <tbody>
                     <tr>
