--- a/src/app/components/pages/services-pages-collection/info/info.component.html
+++ b/src/app/components/pages/services-pages-collection/info/info.component.html
@@ -20,7 +20,7 @@
                 від 10 до 100 примірників ДНК).</p>
             <p>Так як метод ПЛР може визначити фактичну причину захворювання, то це надійний діагностичний засіб в
                 практиці ветеринара.</p>
-            <p>З різних видів ПЛР-діагностики ми використовуємо найбільш сучасну &ndash;ПЛР в режимі реального часу
+            <p>З різних видів ПЛР &#8209; діагностики ми використовуємо найбільш сучасну &ndash;ПЛР в режимі реального часу
                 (Real Time), оскільки вона має ряд незаперечних переваг:</p>
                 <table>
                     <tbody>
