--- a/src/app/components/pages/services-pages-collection/diagnostics-pages-collection/diagnostics-plr-ferrets/diagnostics-plr-ferrets.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-pages-collection/diagnostics-plr-ferrets/diagnostics-plr-ferrets.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="flex flex-wrap justify-center w-full">
         <div class="my-10 w-full">
-            <p class="text-center">Термін виконання 2-3 дні</p>
+            <p class="text-center">Термін виконання 2&#8209;3 дні</p>
             <table>
                 <tbody>
                     <tr>
