--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -15,54 +15,63 @@
             <p class="my-6">Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини. Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
             <p class="my-6">Будьте обережні при виборі витратних матеріалів, так як неправильно відібрані і збережені зразки не приймаються до досліджень.</p>
-            <p class="my-6">Будь-ласка, відправляйте аналізи лише витратними матеріалами які наведені нижче. Баночки та шприци не відправляйте.</p>
+            <p class="my-6"><span class="text-dark-red">Будь-ласка, відправляйте аналізи лише витратними матеріалами які наведені нижче. Баночки та шприци не відправляйте.</span></p>
+            <p class="my-6">По всім питанням звертайтесь за номерами які вказані на сторінці  <a routerLink="/contact" class="text-blue">Контакти</a>.</p>
 
-            <table class="w-full border-collapse border border-gray-300">
+            <table class="w-full -collapse">
                 <tbody>
                     <tr>
-                        <th class="text-left px-4 py-2 border border-gray-300">Матеріал для дослідження</th>
-                        <th class="text-left px-4 py-2 border border-gray-300">Фото витратних матеріалів</th>
+                        <th>Матеріал для дослідження</th>
+                        <th>Фото витратних матеріалів</th>
                     </tr>
                     <tr>
-                        <td class="border border-gray-300">
-                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">• Кров з ЕДТА</div>
+                        <td>
+                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">• Кров з ЕДТА</div>
                         </td>
-                        <td class="px-4 py-2 border border-gray-300">
+                        <td class="px-4 py-2  ">
                             <img src="../../../../../assets/images/containers/edta.png" class="w-60 mx-auto lg:w-1/2" alt="edta">
                             <p class="text-center">Пробирка с антикоагулянтом</p>
                         </td>
                     </tr>
                     <tr>
-                        <td class="border border-gray-300">
-                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">• Змиви з кон'юнктиви та носа</div>
+                        <td>
+                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">
+                                <p>• змив з кон'юнктиви / носа / мигдалин</p>
+                                <p>• змив з кон'юнктиви очей</p>
+                                <p>• асцитна рідина</p>
+                                <p>• синовіальна рідина</p>
+                            </div>
+                            
                         </td>
-                        <td class="px-4 py-2 border border-gray-300">
+                        <td class="px-4 py-2">
                             <img src="../../../../../assets/images/containers/eppendorf.png" class="w-60 mx-auto lg:w-1/2" alt="eppendorf">
                             <p class="text-center">Еппендорф</p>
                         </td>
                     </tr>
                     <tr>
-                        <td class="border border-gray-300">
-                            <div class="mx-auto sm:w-1/2 px-4 py-2 text-left">
-                                <p>• змив</p>
-                                <p>• зішкріб</p>
+                        <td>
+                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">
+                                <p>• зішкріб з виразок ротової порожнини</p>
+                                <p>• зішкріб зі слизової глотки</p>
                                 <p>• рановий матеріал</p>
                                 <p>• ексудат</p>
+                                <p>• сеча, секрет сперми, жовч</p>
                             </div>
                         </td>
-                        <td class="px-4 py-2 border border-gray-300"> 
+                        <td class="px-4 py-2  "> 
                             <img src="../../../../../assets/images/containers/aplicator.png" class="w-60 mx-auto lg:w-1/2" alt="aplicator">
                             <p class="text-center">Аплікатор з транспортної пробіркою</p>
                         </td>
                     </tr>
                     <tr>
-                        <td class="border border-gray-300">
-                            <div class="mx-auto sm:w-1/2 py-2 text-left">
-                                <p>• Змиви з кон'юнктиви та носа</p>
-                                <p>• зішкріб зі слизової урогенітального тракту / піхви / прямої кишки</p>
+                        <td>
+                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">
+                                <p>• мокрота</p>
+                                <p>• змив або зішкріб з різних слизових оболонок</p>
+                                <p>• випіт ( грудної, черевної)</p>
                             </div>
                         </td>
-                        <td class="px-4 py-2 border border-gray-300">
+                        <td class="px-4 py-2  ">
                             <img src="../../../../../assets/images/containers/zond.png" class="w-60 mx-auto lg:w-1/2" alt="zond">
                             <p class="text-center">Зонд урогенітальний</p>
                         </td>
