--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -51,10 +51,10 @@
     background-position: right center;
 }
 
-.worktime {
-    background-color: rgba(153,156,156,0.29);
-    border-radius: 25px;
-}
+// .worktime {
+//     background-color: rgba(153,156,156,0.29);
+//     border-radius: 25px;
+// }
 
 .arrow-down {
     margin-top: 10%;
