--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,26 +1,82 @@
 <footer class=" bg-gray-900">
+    <div id="box" class="invisible 2xl:visible">
+        <div class="cat">
+            <div class="head">
+                <div class="ears">
+                    <div class="ear left"></div>
+                    <div class="ear right"></div>
+                </div>
+                <div class="eyes">
+                    <div class="eye left"></div>
+                    <div class="eye right"></div>
+                </div>
+                <div class="muzzle">
+                    <div class="nose"></div>
+                </div>
+            </div>
+            <div class="body">
+                <div class="paw"></div>
+            </div>
+            <div class="tail">
+                <div class="tail-segment">
+                    <div class="tail-segment">
+                        <div class="tail-segment">
+                            <div class="tail-segment">
+                                <div class="tail-segment">
+                                    <div class="tail-segment">
+                                        <div class="tail-segment">
+                                            <div class="tail-segment">
+                                                <div class="tail-segment">
+                                                    <div class="tail-segment">
+                                                        <div class="tail-segment">
+                                                            <div class="tail-segment">
+                                                                <div class="tail-segment">
+                                                                    <div class="tail-segment last-segment">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8 xl:py-3">
         <div class="md:flex md:justify-between md:items-center lg:mb-5">
-          <div class="mb-6 md:mb-0">
-              <a routerLink="/" class="flex items-center">
-                  <img src="../../assets/images/logo.png" class="h-8 me-3" alt="GrenLab Logo" />
-                  <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
-              </a>
-          </div>
-          <div class="footer-link grid grid-cols-2 text-center text-white font-jost list-none items-center md:text-lg">
-            <li><a routerLink="/" class="hover:text-light-green" routerLinkActive="text-light-green" [routerLinkActiveOptions]="{ exact: true }">Головна</a></li>
-            <li><a routerLink="/license" class="hover:text-light-green" routerLinkActive="text-light-green">Дозвільні документи</a></li>
-            <li><a href="../../../assets/files/blank.pdf" download class="hover:text-light-green">Направлення на дослідження</a></li>
-            <li><a href="../../../assets/files/price2024greenlab.pdf" target="_blank" class="hover:text-light-green">Прайс-лист</a></li>
-            <li><a routerLink="/guide" class="hover:text-light-green" routerLinkActive="text-light-green">Інструкція взяття проб</a></li>
-            <li><a routerLink="/contact" class="hover:text-light-green" routerLinkActive="text-light-green">Контакти</a></li>
-          </div>
-      </div>
-      <hr class="mt-4 lg:my-0"/>
-      <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
-          <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
-          </span>
-      </div>
+            <div class="mb-6 md:mb-0">
+                <a routerLink="/" class="flex items-center">
+                    <img src="../../assets/images/logo.png" class="h-8 me-3" alt="GrenLab Logo" />
+                    <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
+                </a>
+            </div>
+            <div
+                class="footer-link grid grid-cols-2 text-center text-white font-jost list-none items-center md:text-lg">
+                <li><a routerLink="/" class="hover:text-light-green" routerLinkActive="text-light-green"
+                        [routerLinkActiveOptions]="{ exact: true }">Головна</a></li>
+                <li><a routerLink="/license" class="hover:text-light-green"
+                        routerLinkActive="text-light-green">Дозвільні документи</a></li>
+                <li><a href="../../../assets/files/blank.pdf" download class="hover:text-light-green">Направлення на
+                        дослідження</a></li>
+                <li><a href="../../../assets/files/price2024greenlab.pdf" target="_blank"
+                        class="hover:text-light-green">Прайс-лист</a></li>
+                <li><a routerLink="/guide" class="hover:text-light-green" routerLinkActive="text-light-green">Інструкція
+                        взяття проб</a></li>
+                <li><a routerLink="/contact" class="hover:text-light-green"
+                        routerLinkActive="text-light-green">Контакти</a></li>
+            </div>
+        </div>
+        <hr class="mt-4 lg:my-0" />
+        <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
+            <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
+            </span>
+        </div>
     </div>
 </footer>
-
