--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -26,7 +26,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">• Кров з ЕДТА</div>
+                            <div class="mx-auto w-full lg:pl-20 py-2 text-left">
+                                <p>• Кров з ЕДТА</p>
+                                <p>• змиви, якщо немає епендорфу</p>
+                            </div>
                         </td>
                         <td class="px-4 py-2  ">
                             <img src="../../../../../assets/images/containers/edta.png" class="w-60 mx-auto lg:w-1/2" alt="edta">
@@ -40,22 +43,25 @@
                                 <p>• змив з кон'юнктиви очей</p>
                                 <p>• асцитна рідина</p>
                                 <p>• синовіальна рідина</p>
+                                <p>• випіт ( грудної, черевної)</p>
+                                <p>• сеча, секрет сперми, жовч</p>
+                                <p>• сироватка крові</p>
                             </div>
                             
                         </td>
                         <td class="px-4 py-2">
                             <img src="../../../../../assets/images/containers/eppendorf.png" class="w-60 mx-auto lg:w-1/2" alt="eppendorf">
-                            <p class="text-center">Еппендорф</p>
+                            <p class="text-center">Епендорф</p>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div class="mx-auto w-full lg:pl-20 py-2 text-left">
+                                <p>• БАКПОСІВ</p>
                                 <p>• зішкріб з виразок ротової порожнини</p>
                                 <p>• зішкріб зі слизової глотки</p>
                                 <p>• рановий матеріал</p>
                                 <p>• ексудат</p>
-                                <p>• сеча, секрет сперми, жовч</p>
                             </div>
                         </td>
                         <td class="px-4 py-2  "> 
@@ -68,7 +74,6 @@
                             <div class="mx-auto w-full lg:pl-20 py-2 text-left">
                                 <p>• мокрота</p>
                                 <p>• змив або зішкріб з різних слизових оболонок</p>
-                                <p>• випіт ( грудної, черевної)</p>
                             </div>
                         </td>
                         <td class="px-4 py-2  ">
