fix some colors

--- a/src/app/components/pages/rules-pages-collection/marking/marking.component.html
+++ b/src/app/components/pages/rules-pages-collection/marking/marking.component.html
@@ -14,8 +14,8 @@
             <p>Для того, щоб підписати пробу, можна використовувати незмивні маркери, що клеяться стікери, головною властивістю яких є неможливість видалення (зникнення) під час зберігання і транспортування матеріалу.</p>
             <p>Інформація, яка повинна бути на пробірці з матеріалом:</p>
             <ol class="list-counter-circle my-3">
-                <li>вид і кличка тварини (наприклад: &laquo;С. Санні&raquo;)</li>
-                <li>прізвище власника (наприклад: &laquo;Самойлов&raquo;)</li>
+                <li>вид і кличка тварини (наприклад: &laquo;Пумба&raquo;)</li>
+                <li>прізвище власника (наприклад: &laquo;Мельник&raquo;)</li>
                 <li>вид дослідження (наприклад: &laquo;ПЛР хламідіоз&raquo;) *за бажанням, якщо виникає необхідність</li>
             </ol>
         </div>
