--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class=" bg-gray-900">
-    <div id="box" class="invisible 2xl:visible">
+    <div id="box" class="hidden 2xl:block">
         <div class="cat">
             <div class="head">
                 <div class="ears">
